--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,15 @@ spring:
     name: SpringBatang
 
   datasource:
-    url: jdbc:h2:mem:testdb       # ??? ??? H2 ?????? ??
+    url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
-    username: sa                  # ?? ??? ??
-    password: ''                  # ????? ? ?
+    username: sa
+    password: ''
 
   h2:
     console:
-      enabled: true               # H2 ?? ???
-      path: /h2-console           # H2 ?? ?? ??
+      enabled: true
+      path: /h2-console
 
     ##MySQL ?? (???? ??, ??? ??? ? ?? /local)
   #  datasource:
@@ -23,12 +23,12 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update            # JPA? DB ???? ???? ??? ?? (create, update, validate, none ? ??)
-    show-sql: true                # ??? SQL ?? ??
+      ddl-auto: update           
+    show-sql: true
     properties:
       hibernate:
-        format_sql: true          # SQL ??? ?? ?? ????? ??
-        use_sql_comments: true    # SQL ?? ?? (Optional)
+        format_sql: true
+        use_sql_comments: true
 
   sql:
     init:
@@ -57,14 +57,14 @@ spring:
 jwt:
   secret: tempJWTKEYqweqweqweqweqweqweqweqweqweqweqwe
   access-token:
-    expiration: 3600000  # 1?? (??? ??)
+    expiration: 3600000
   refresh-token:
-    expiration: 604800000  # 7? (??? ??)
+    expiration: 604800000
 
 logging:
   level:
-    org.hibernate.SQL: INFO    # SQL ?? ??? ??
-    org.hibernate.type.descriptor.sql: TRACE  # SQL ??? ???? ?? (Optional)
+    org.hibernate.SQL: INFO
+    org.hibernate.type.descriptor.sql: TRACE
 
 server:
   port: 8080
